[package]
name = "logger"
version = "0.1.0"
authors = ["Michael Paulson <mpaulson@netflix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.116"
serde_json = "1.0.57"
tui = "0.12.0"
termion = "1.5.5"
